# queroplantao-api

./: .env.example  .env.firebase.example  .gitignore  .isort.cfg  CLAUDE.md  Makefile  README.md  _org_id IS NULL THEN  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
.github/workflows/: publish-api-client.yml  validate-api-client.yml
alembic/: env.py
alembic/versions/: 000000000001_add_postgresql_extensions.py  000000000002_seed_roles_and_specialties.py  000000000003_unify_document_types.py  000000000004_seed_document_types.py  000000000005_add_screening_cancellation_support.py  000000000006_remove_redundant_step_fields.py  000000000007_add_pending_document_support.py  000000000008_add_document_review_counts.py  000000000009_add_screening_alerts_support.py  000000000010_add_step_tracking_columns.py  000000000011_denormalize_professional_org_ids.py  000000000012_add_step_info_to_screening_processes.py  000000000013_remove_professional_soft_delete_add_cascade.py  000000000014_make_document_type_org_required.py  000000000015_add_is_configured_to_document_upload_step.py  000000000016_add_compliance_report_url.py  069f6f87cb6c_remove_sharing_scope_add_data_scope_.py  1c3fbae705d9_refactor_organization_remove_duplicate.py  28171452884d_simplify_screening_process_model.py  3b2baefd4a62_users.py  4ab2c4a709ae_remove_interview_from_screening.py  601b7033d64c_remove_is_active_and_state_name.py  623bcfdde15f_add_organizations.py  6283b21dcda5_remove_interview_enum_value.py  6c70dbce726c_add_screening.py  8588274c0799_refactor_document_step_flow.py  8ece189cb1b7_add_professionals_and_organizations.py  985f2cb69266_add_cancelled_fields_to_screening_.py  9fd32650c669_professionals_indexes.py  a16d735522cf_add_professionals.py  a1b2c3d4e5f6_refactor_professionals_module.py  a1b2c3d4e5f7_remove_screening_template.py  a4d50683ad2a_initial_migration.py  b2c3d4e5f6g7_add_search_indexes_and_extensions.py  c724fe9c3d80_add_cpf_to_users.py  e1b35e775ed8_refactor_organization_memberships.py  eec8aeed7c2e_add_tracking_mixin_to_users.py  f9a5840a42d0_add_contracts.py  fa4b42729c2d_add_screening_workflow.py  fb5c91a3e7d8_add_interview_client_validation_to_step_type_enum.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  exceptions.py  security.py
app/core/dependencies/: __init__.py  database.py  settings.py
app/core/logging/: __init__.py  config.py  middleware.py
app/core/utils/: cpf.py
app/domain/: __init__.py
app/domain/events/: __init__.py
app/domain/models/: __init__.py  base.py  fields.py  mixins.py
app/domain/schemas/: __init__.py
app/domain/services/: __init__.py
app/domain/value_objects/: __init__.py  address.py  contact.py  documents.py
app/infrastructure/: __init__.py
app/infrastructure/database/: connection.py
app/infrastructure/messaging/: __init__.py  broker.py
app/infrastructure/repositories/: __init__.py  base.py
app/presentation/: __init__.py
app/presentation/api/: __init__.py  health.py
app/use_cases/: __init__.py
app/workers/: __init__.py  main.py
docs/: API_CLIENT_RELEASE.md  CONTEXT.md  Quero_Plantao_API.postman_collection.json
docs/bruno/: bruno.json  collection.bru
docs/bruno/auth/: folder.bru  me.bru
docs/bruno/document-types/: activate.bru  create.bru  deactivate.bru  delete.bru  folder.bru  get.bru  list-all.bru  list.bru  update.bru
docs/bruno/enums/: list-document-types.bru  list-professional-types.bru
docs/bruno/environments/: dev.bru
docs/bruno/health/: check.bru  folder.bru
docs/bruno/invitations/: accept-invitation.bru  folder.bru
docs/bruno/professionals/: create-composite.bru  create.bru  delete.bru  folder.bru  get.bru  list-summary.bru  list.bru  update-composite.bru  update.bru
docs/bruno/screenings/: advance-step.bru  approve-screening.bru  cancel-screening.bru  complete-client-validation.bru  complete-conversation-step.bru  complete-document-review.bru  complete-document-upload.bru  complete-interview.bru  complete-professional-data-step.bru  configure-documents.bru  create-alert.bru  create-document-type.bru  create-screening.bru  delete-screening.bru  finalize-screening.bru  folder.bru  get-screening-settings.bru  get-screening.bru  keep-existing-document.bru  list-document-types.bru  list-my-screenings.bru  list-screenings.bru  public-get-screening.bru  public-upload-document.bru  screenings.bru  (+7 more)
docs/code_reviews/: 2026-02-02_document_upload_consolidation.md  2026-02-02_document_upload_is_configured.md
docs/implementation/: PHASE_1_VERSION_INFRASTRUCTURE.md  PHASE_2_QUALIFICATIONS_SYNC.md  PHASE_3_PAYMENT_DATA_SYNC.md
docs/modules/: AUTH_MODULE.md  CONTRACTS_MODULE.md  ORGANIZATIONS_MODULE.md  PROFESSIONALS_MODULE.md  SCREENING_FRONTEND.md  SCREENING_MODULE.md  SHARED_MODULE.md  UNITS_MODULE.md  USERS_MODULE.md
scripts/: generate_firebase_token.py  generate_ts_enums.py  generate_ts_error_codes.py  release_api_client.sh  seed_organizations.py  seed_professionals.py  sync_client_version.sh
src/: __init__.py
src/app/: __init__.py  config.py  context.py  exceptions.py  main.py  security.py
src/assets/: README.md
src/modules/: __init__.py
src/shared/: __init__.py
src/workers/: __init__.py  main.py
tests/: conftest.py
tests/factories/: __init__.py
(+563 files in other folders)
